--- a/linkedstyle.css
+++ b/linkedstyle.css
@@ -19,7 +19,7 @@ Grid-template:
 
 height: 100vh;
 grid-gap:5px;
-margin: 0px 200px;
+margin: 0px 100px;
 border: black solid 2px;
 }
 
@@ -99,5 +99,31 @@ border: black solid 2px;
 
 .addToFeed {
     border: black dashed 2px;
+}
+
+@media screen and (max-width: 800px) {
+    .container {
+        Grid-template:
+        "profile feed" 1fr /
+        200px 1fr;
+        margin: 0px 50px;
+    }
+
+    .suggestions {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+        Grid-template:
+        "feed" 1fr /
+         1fr;
+         margin: 0px;
+    }
+
+    .profile{
+        display: none;
+    }
 }
 
